Pertemuan 14: event streaming
